# atrio-boardroom

./: .env.example  .gitignore  LICENSE  Makefile  README.md
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  _test.py  audit.py  auth.py  boardpack.py  deps.py  documents.py  health.py  mandates.py  schemas.py  sessions.py  treasury.py  turns.py  voice.py
backend/app/audit/: __init__.py  service.py
backend/app/core/: __init__.py  config.py  errors.py  logging.py  security.py
backend/app/db/: __init__.py  base.py  models.py
backend/app/documents/: __init__.py  service.py
backend/app/inference/: __init__.py  gateway.py  providers.py  registry.py
backend/app/mail/: __init__.py
backend/app/memory/: __init__.py  service.py
backend/app/observability/: __init__.py
backend/app/scripts/: __init__.py  seed_demo.py
backend/app/services/: __init__.py  export.py  orchestrator.py  session_service.py
backend/app/treasury/: __init__.py  kraken.py  mandate.py  service.py
backend/app/voice/: __init__.py  service.py  speechmatics.py
backend/migrations/: env.py  script.py.mako
backend/migrations/versions/: 0001_initial.py
backend/tests/: conftest.py
backend/tests/e2e/: test_full_demo_flow.py
backend/tests/integration/: test_api_audit.py  test_api_auth.py  test_api_coverage_topup.py  test_api_documents.py  test_api_health.py  test_api_mandates.py  test_api_metrics.py  test_api_sessions.py  test_api_test_seed.py  test_api_treasury.py  test_api_turns.py  test_api_voice_boardpack.py  test_cross_tenant_isolation.py  test_mandate_violation_corpus.py
backend/tests/unit/: test_audit.py  test_config.py  test_documents.py  test_errors.py  test_export.py  test_gateway.py  test_kraken.py  test_logging.py  test_mail.py  test_mandate.py  test_memory.py  test_observability.py  test_orchestrator.py  test_providers.py  test_registry.py  test_security.py  test_session_service.py  test_sidecar.py  test_speechmatics.py  test_treasury_service.py
demovideo/: README.md
deploy/: 01-bootstrap.sh  02-deploy.sh  03-tls.sh  99-fix-prod-env.sh  README.md  prod.env.example
docker/: api.Dockerfile  docker-compose.prod.yml  docker-compose.yml  frontend.Dockerfile  voice-sidecar.Dockerfile
docs/: ARCHITECTURE.md  ATRIO_Traceability_LIVE.md  COMPARISONS.md  DEMO_RUNBOOK.md  SPONSOR_INTEGRATION_TRUTH.md  openapi.json
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  vite.config.ts
prompts/: cfo_v1.txt  cmo_v1.txt  coo_v1.txt  counsel_v1.txt  cto_v1.txt  facilitator_v1.txt  treasury_v1.txt
scripts/: build_cover_image.py  build_judge_script_pdf.py  build_pitch_deck.py  deploy.sh  gen-keys.sh  pptx_to_pdf.ps1  render_deck_previews.py  smoke.sh
sidecars/: __init__.py
submission_media/: JUDGE_TEST_SCRIPT.md  README.md  (+2 more)
(+89 files in other folders)
